--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ktufernando/node-06-restserver.git"
+    "url": "https://github.com/JJUAREZZ/alkemy-challenge.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ktufernando/node-06-restserver/issues"
+    "url": "https://github.com/JJUAREZZ/alkemy-challenge.git"
   },
-  "homepage": "https://github.com/ktufernando/node-06-restserver#readme",
+  "homepage": "https://github.com/JJUAREZZ/alkemy-challenge.git",
   "lint-staged": {
     "*.{js,json}": [
       "prettier --write",
